# COS30018_Group3.1_OpenBuffet

./: .gitignore  README.md  pyproject.toml  requirements.txt
Task_1/: stock_prediction.ipynb  stock_prediction.py  stock_prediction_fixed.ipynb  stock_prediction_fixed.py
Task_1/csv-results/: 2026-05-31_AMZN-sh-1-sc-1-sbd-0-huber-adam-LSTM-seq-50-step-15-layers-2-units-256.csv
Task_1/logs/2026-05-31_AMZN-sh-1-sc-1-sbd-0-huber-adam-LSTM-seq-50-step-15-layers-2-units-256/train/: events.out.tfevents.1780242090.ADMIN-PC.9448.0.v2
Task_1/logs/2026-05-31_AMZN-sh-1-sc-1-sbd-0-huber-adam-LSTM-seq-50-step-15-layers-2-units-256/validation/: events.out.tfevents.1780242115.ADMIN-PC.9448.1.v2
Task_2/: TaskC2_Report.docx  stock_prediction_0.1.py
Task_3/: stock_prediction_0.1.py
