[project]
name = "cos30018-group3-1-openbuffet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py==2.4.0",
    "astunparse==1.6.3",
    "beautifulsoup4==4.14.3",
    "certifi==2026.5.20",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "contourpy==1.3.3",
    "curl-cffi==0.15.0",
    "cycler==0.12.1",
    "flatbuffers==25.12.19",
    "fonttools==4.63.0",
    "gast==0.7.0",
    "google-pasta==0.2.0",
    "grpcio==1.80.0",
    "h5py==3.14.0",
    "idna==3.17",
    "ipykernel>=7.2.0",
    "joblib==1.5.3",
    "keras==3.14.1",
    "kiwisolver==1.5.0",
    "libclang==18.1.1",
    "lxml==6.1.1",
    "markdown-it-py==4.2.0",
    "matplotlib==3.10.9",
    "mdurl==0.1.2",
    "ml-dtypes==0.5.4",
    "mplfinance>=0.12.10b0",
    "multitasking==0.0.13",
    "namex==0.1.0",
    "numpy==2.4.6",
    "opt-einsum==3.4.0",
    "optree==0.19.1",
    "packaging==26.2",
    "pandas==3.0.3",
    "pandas-datareader==0.10.0",
    "peewee==4.0.6",
    "pillow==12.2.0",
    "platformdirs==4.10.0",
    "protobuf==7.35.0",
    "pycparser==3.0",
    "pygments==2.20.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.2",
    "requests==2.34.2",
    "requests-html>=0.10.0",
    "rich==15.0.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "setuptools==82.0.1",
    "six==1.17.0",
    "soupsieve==2.8.4",
    "tensorboard>=2.20.0",
    "tensorflow==2.21.0",
    "termcolor==3.3.0",
    "threadpoolctl==3.6.0",
    "typing-extensions==4.15.0",
    "tzdata==2026.2",
    "urllib3==2.7.0",
    "websockets==16.0",
    "wheel==0.47.0",
    "wrapt==2.2.1",
    "yahoo-fin>=0.8.9.1",
    "yfinance==1.4.1",
]
